# digital_earth_god

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-TW.md  netlify.toml  pyproject.toml  railway.toml  start.ps1  test_output.txt
agents/dijizhu/: agent.py
agents/tudigong/: agent.py  blessing_agent.py
agents/wuying/: agent.py  wish_agent.py
apps/api/: gateway.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  page.tsx
apps/web/app/ask/: page.tsx
apps/web/app/council/: page.tsx
apps/web/app/wish/: page.tsx
apps/web/components/: CouncilMapInner.tsx  ResultMap.tsx  ResultMapInner.tsx  TempleNav.tsx
apps/web/lib/a2ui/: Renderer.tsx
deg/a2ui/: surfaces.py
deg/mcp/spatial_db/: server.py
deg/schemas/: __init__.py  contracts.py
deg/seed/: loader.py
deg/warmdata/: store.py
dijizu_agent/: 五條港里.json  光賢里.json  兌悅里.json  南廠里.json  南美里.json  南門里.json  地基主Agent管理器.html  城隍里.json  大涼里.json  小西門里.json  府前里.json  永華里.json  法華里.json  淺草里.json  藥王里.json  西和里.json  西湖里.json  西賢里.json  赤嵌里.json  郡王里.json  開山里.json
dijizu_agent_new/: 五條港里.json  光賢里.json  兌悅里.json  南廠里.json  南美里.json  南門里.json  城隍里.json  大涼里.json  小西門里.json  府前里.json  永華里.json  法華里.json  淺草里.json  藥王里.json  西和里_new.json  西湖里.json  西賢里.json  赤嵌里.json  郡王里.json  開山里.json
tests/: test_a2ui_surfaces.py  test_contracts.py  test_dijizhu_a2a_server.py  test_dijizhu_community.py  test_dijizhu_evidence_integration.py  test_dijizhu_integration.py  test_gateway.py  test_gateway_a2ui_integration.py  test_geo.py  test_mcp_spatial_db.py  test_seed_loader.py  test_tudigong_integration.py  test_tudigong_remote_integration.py
